src/test/ui/moves/moves-based-on-type-match-bindings.nll.stderr
error[E0382]: borrow of moved value: `x`
  --> $DIR/moves-based-on-type-match-bindings.rs:16:11
   |
LL |         Foo {f} => {}
   |              - value moved here
...
LL |     touch(&x); //~ ERROR use of partially moved value: `x`
   |           ^^ value borrowed here after move
   |
   = note: move occurs because `x.f` has type `std::string::String`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
